--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -1,9 +1,23 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>cadastro</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+
+  <form>
+    <div class="mb-3">
+      <label for="inputNome" class="form-label">Nome completo</label>
+      <input type="email" class="form-control" id="inputNome">
+    </div>
+    <div class="mb-3">
+      <label for="inputEmail" class="form-label">Email</label>
+      <input type="email" class="form-control" id="inputEmail">
+    </div>
+    <div class="mb-3">
+      <label for="inputPassword" class="form-label">Senha</label>
+      <input type="password" class="form-control" id="inputPassword">
+    </div>
+    <div class="mb-3">
+      <label for="inputRepeatPassword" class="form-label">Confirmar senha</label>
+      <input type="password" class="form-control" id="inputRepeatPassword">
+    </div>
+    <button type="submit" class="btn btn-primary">Fazer cadastro</button>
+  </form>
 
 </ion-content>
