--- a/src/app/servicos/servicos.page.html
+++ b/src/app/servicos/servicos.page.html
@@ -1,9 +1,16 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>servicos</ion-title>
+  <ion-toolbar class="ion-text-center">
+    <button type="submit" class="btn btn-primary">Cadastrar novo serviço</button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Corte</h5>
+      <h6 class="card-subtitle mb-2 text-muted">R$ 40,00</h6>
+      <p class="card-text">Faça seu corte com os melhores barbeiros</p>
+      <a href="#" class="card-link">Editar serviço</a>
+    </div>
+  </div>
 </ion-content>
