--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -3,7 +3,7 @@
   <form>
     <div class="mb-3">
       <label for="inputNome" class="form-label">Nome completo</label>
-      <input type="email" class="form-control" id="inputNome">
+      <input type="text" class="form-control" id="inputNome">
     </div>
     <div class="mb-3">
       <label for="inputEmail" class="form-label">Email</label>
