roteamento base de todo o app

--- a/src/app/cadastro-servico/cadastro-servico.page.html
+++ b/src/app/cadastro-servico/cadastro-servico.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Cadastrar serviço</ion-title>
+    <button type="button" class="btn-close" aria-label="Close" routerLink="/servicos" routerDirection="back"></button>
   </ion-toolbar>
 </ion-header>
 
