--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -17,7 +17,7 @@
       <label for="inputRepeatPassword" class="form-label">Confirmar senha</label>
       <input type="password" class="form-control" id="inputRepeatPassword">
     </div>
-    <button type="submit" class="btn btn-primary">Fazer cadastro</button>
+    <button type="submit" class="btn btn-primary" routerLink="/login" routerDirection="forward">Fazer cadastro</button>
   </form>
 
 </ion-content>
