--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,9 +10,9 @@
       <input type="password" class="form-control" id="inputPassword">
     </div>
     <div class="mb-3">
-      <label class="form-text">Não tem cadastro? <button class="btn btn-light">Faça o seu!</button></label>
+      <label class="form-text" routerLink="/cadastro" routerDirection="forward">Não tem cadastro? <button class="btn btn-light">Faça o seu!</button></label>
     </div>
-    <button type="submit" class="btn btn-primary">Fazer login</button>
+    <button type="submit" class="btn btn-primary" routerLink="/servicos" routerDirection="forward">Fazer login</button>
   </form>
 
 </ion-content>
