--- a/src/app/servicos/servicos.page.html
+++ b/src/app/servicos/servicos.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar class="ion-text-center">
-    <button type="submit" class="btn btn-primary">Cadastrar novo serviço</button>
+    <button type="submit" class="btn btn-primary" routerLink="/cadastro-servico" routerDirection="forward">Cadastrar novo serviço</button>
   </ion-toolbar>
 </ion-header>
 
@@ -10,7 +10,7 @@
       <h5 class="card-title">Corte</h5>
       <h6 class="card-subtitle mb-2 text-muted">R$ 40,00</h6>
       <p class="card-text">Faça seu corte com os melhores barbeiros</p>
-      <a href="#" class="card-link">Editar serviço</a>
+      <a routerLink="/cadastro-servico" routerDirection="forward" class="card-link">Editar serviço</a>
     </div>
   </div>
 </ion-content>
