--- a/src/app/cadastro-servico/cadastro-servico.page.html
+++ b/src/app/cadastro-servico/cadastro-servico.page.html
@@ -1,30 +1,32 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Cadastrar serviço</ion-title>
-    <button type="button" class="btn-close" aria-label="Close" routerLink="/servicos" routerDirection="back"></button>
+    <ion-title>{{ isEditMode ? 'Editar' : 'Cadastrar' }} serviço</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="servicos" (click)="fecharModal()"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content id="ic">
 
-  <form>
+  <form [formGroup]="form">
     <div class="mb-3">
       <label for="inputNome" class="form-label">Nome do serviço</label>
-      <input type="text" class="form-control" id="inputNome">
+      <input formControlName="nome" type="text" class="form-control" id="inputNome">
     </div>
     <div class="mb-3">
-      <label for="inputValor" class="form-label">Valor do serviço</label>
+      <label for="inputPreco" class="form-label">Preco do serviço</label>
       <div class="input-group mb-3">
         <span class="input-group-text">R$</span>
-        <input type="number" class="form-control ion-text-end" id="inputValor">
+        <input formControlName="preco" type="number" class="form-control ion-text-end" id="inputPreco">
         <span class="input-group-text">,00</span>
       </div>
     </div>
     <div class="mb-3">
       <label for="inputDescricao" class="form-label">Descrição do serviço</label>
-      <input type="text" class="form-control" id="inputDescricao">
+      <input formControlName="descricao" type="text" class="form-control" id="inputDescricao">
     </div>
-    <button type="submit" class="btn btn-primary">Cadastrar serviço</button>
+    <button type="submit" class="btn btn-primary" (click)="enviarServico()" [disabled]="form.invalid">{{ isEditMode ? 'Editar' : 'Cadastrar' }} serviço</button>
   </form>
 
 </ion-content>
