--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,18 +1,18 @@
 <ion-content>
 
-  <form>
+  <form [formGroup]="form">
     <div class="mb-3">
       <label for="inputEmail" class="form-label">Email</label>
-      <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+      <input formControlName="email" type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
       <label for="inputPassword" class="form-label">Senha</label>
-      <input type="password" class="form-control" id="inputPassword">
+      <input formControlName="password" type="password" class="form-control" id="inputPassword">
     </div>
     <div class="mb-3">
       <label class="form-text" routerLink="/cadastro" routerDirection="forward">Não tem cadastro? <button class="btn btn-light">Faça o seu!</button></label>
     </div>
-    <button type="submit" class="btn btn-primary" routerLink="/servicos" routerDirection="forward">Fazer login</button>
+    <button type="submit" class="btn btn-primary" (click)="fazerLogin()" [disabled]="form.invalid">Fazer login</button>
   </form>
 
 </ion-content>
