--- a/src/app/servicos/servicos.page.scss
+++ b/src/app/servicos/servicos.page.scss
@@ -1,2 +1,15 @@
-.card{margin: 5% auto;}
+.card
+{
+    margin: 5% auto;
+    background-color: var(--ion-color-light);
+
+    & .card-body .card-title
+    {color: var(--ion-color-light-contrast);}
+
+    & .card-body .card-subtitle
+    {color: var(--ion-color-medium);}
+
+    & .card-body .card-text
+    {color: var(--ion-color-light-contrast)}
+}
 a{text-decoration: none;}
