add ion refresher

--- a/src/app/servicos/servicos.page.html
+++ b/src/app/servicos/servicos.page.html
@@ -13,6 +13,9 @@
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="atualizarServicos($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <div class="list-group">
     <div class="card" style="width: 18rem;" *ngFor="let servico of servicos$|async">
       <div class="card-body">
@@ -20,6 +23,7 @@
         <h6 class="card-subtitle mb-2 text-muted">R$ {{ servico.preco }}</h6>
         <p class="card-text">{{ servico.descricao }}</p>
         <a class="card-link" (click)="abrirModalEditar(servico)">Editar serviço</a>
+        <a class="card-link text-danger" (click)="excluirServico(servico)">Excluir serviço</a>
       </div>
     </div>
   </div>
